--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ ul li::before {
   top: 8px;
 }
 ul li.checked {
-  color: #ff5945;
+  color: #646464;
   text-decoration: line-through;
 }
 ul li.checked::before {
@@ -129,4 +129,20 @@ ul li.checked::before {
   position: absolute;
   left: 24px;
   top: 9px;
+}
+
+ul li span {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  color: #555555;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+}
+ul li span:hover {
+  background-color: #f5f3f3;
 }
